--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,59 @@
 	  
-body { margin:0; padding:0; }
-#map { position:absolute; top:0; bottom:0; width:100%; }
+.TradeGothicLTPro-Light { 
+	font-family: TradeGothicLTPro-Light;
+	font-weight: normal;
+	font-style: normal;
+}
+
+body {	
+	font-family: TradeGothicLTPro-Light;
+	color:#f5f5f7;
+	margin: 0;
+	padding: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	border: 0;
+	outline: 0;
+}
+
+#map { position:absolute; top:0; bottom:0; width:100%; z-index: 0;}
 .d3-vec { position:absolute; }
 
-/*
-.Oth {
-	stroke:#CBD0D5;
-	fill:none;
+#sidebar {
+	position:fixed;
+	top:50px;
+	left:50px;
+	width: 90px;
+	height: 600px;
+	color: #ECECEE;	
+	z-index: 999;
 }
 
-.Sho {
-	stroke:#E98730;
-	fill:none;
+#sidebar .button {
+	position:relative;
+	margin-left:auto;
+	margin-right:auto;	
+	margin-top:10px;	
+	display:block;
+	padding:20px 5px 20px 5px;
+	width:60px;
+	height:30px;
+	border-radius:35px;
+	font-size:11px;
+	color:#fff;
+	line-height:13px;
+	text-align:center;
+	text-decoration:none;
+	vertical-align:middle;
+	opacity:0.8;
+	word-wrap:break-word;		
 }
 
-.Hom {
-	stroke: #48DCBC;
-	fill:none;
+#sidebar .button:hover {
+	opacity:1;
 }
-.Out {
-	stroke: #00AEDB;
-	fill:none;
-}
-.Nig {
-	stroke: #AA3325;
-	fill:none;
-}
-.Art {
-	stroke: #DD4A38;
-	fill:none;
-}
-.Tra {
-	stroke: #25AE90;
-	fill:none;
-}
-.Foo{
-	stroke:#EBB845;
-	fill:none;
-}
-.Col {
-	stroke: #44C5E7;
-	fill:none;
-}
-*/
+
+
 
 .Oth {
 	stroke:none;
@@ -50,74 +61,105 @@ body { margin:0; padding:0; }
 }
 
 .Sho {
-	stroke:#F05A6D;
+	background:#A92B4D;	
+	stroke:#A92B4D;
 	fill:none;
 }
 
 .Hom {
-	stroke:#014F86;
+	background:#3867B1;	
+	stroke:#3867B1;
 	fill:none;
 }
 .Out {
-	stroke:#7CCDC9;
+	background:#2B7A3C;	
+	stroke:#2B7A3C;
 	fill:none;
 }
 .Nig {
-	stroke:#6C5B90;
+	background:#DF6235;	
+	stroke:#DF6235;
 	fill:none;
 }
 .Art {
-	stroke:#473270;
+	background:#F2B71A;	
+	stroke:#F2B71A;
 	fill:none;
 }
 .Tra {
-	stroke: #3EC1CA;
+	background:#9ACA45;	
+	stroke: #9ACA45;
 	fill:none;
 }
 .Foo{
-	stroke:#E52639;
+	background:#E34A51;	
+	stroke:#E34A51;
 	fill:none;
 }
 .Col {
-	stroke: #0095C7;
+	background:#83CBF1;	
+	stroke:#83CBF1;
 	fill:none;
 }
 
-.a {
-	stroke:#F05A6D;
-	fill:#F05A6D;
-}
-/*new color set for different user id*/
-."1030338131" {
-	stroke:#F05A6D;
-	fill:none;
+.shown {
+	visibility:default;
 }
 
-."1100505420" {
-	stroke:#014F86;
-	fill:none;
+.hide {
+	visibility:hidden;
 }
-."1167916663" {
-	stroke:#7CCDC9;
-	fill:none;
+
+/***************/
+/* Time slider */
+/***************/
+
+#bottom{
+	margin-left:180px;
+	position:absolute;
+	top:50px;
+	float:left;
+	color:#ffffff;	
 }
-."1450480397" {
-	stroke:#6C5B90;
-	fill:none;
+
+#timeslider{
+	width:1000px;
+	height:20px;
+	padding:25px 0 15px 0;
+	position:relative;
+	float:left;
+	display:block;
 }
-.'1480860900' {
-	stroke:#473270;
-	fill:none;
+
+#time{
+	position:relative;
+	float:right;
+	font-size:48px;
+	height:60px;
+	
 }
-.'1791984341' {
-	stroke: #3EC1CA;
-	fill:none;
+
+.ui-slider-horizontal {
+    height: 0.4em;
+    border: 1px solid #ffffff;
+    background-color: #aaaaaa;
 }
-.1808472122 {
-	stroke:#E52639;
-	fill:none;
+
+.ui-widget {
+    font-family: Verdana,Arial,sans-serif;
+    font-size: 0.4em;
 }
-.1821824014 {
-	stroke: #0095C7;
-	fill:none;
+
+.ui-slider-horizontal .ui-slider-handle {
+    margin-left: -0.1em;
+    top: -0.7em;
+    background-color:#FFFFFF;
+}
+
+.ui-slider .ui-slider-handle {
+    cursor: default;
+    height: 1.6em;
+    position: absolute;
+    width: 0.5em;
+    z-index: 2;
 }
